--- a/MonoGameLearn/MonoGameLearn.csproj
+++ b/MonoGameLearn/MonoGameLearn.csproj
@@ -21,4 +21,9 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Content\square128.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
